--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   </main>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="js/haversine.js"></script>
-  <script src="js/weekends.js"></script>
-  <script src="js/app.js"></script>
-</body>
+<script src="js/haversine.js?v=1"></script>
+<script src="js/weekends.js?v=1"></script>
+<script src="js/app.js?v=2"></script>
+
 </html>
