--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
       <div class="row">
         <label>Week-end</label>
         <select id="weekendSelect"></select>
+        <div class="row">
+  <label>Rayon : <span id="radiusValue">60</span> km</label>
+
+  <input
+    type="range"
+    id="radius"
+    min="10"
+    max="150"
+    step="5"
+    value="60"
+  >
+</div>
+
       </div>
 
       <div class="row chips" id="chips"></div>
