--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
       </div>
 
       <div class="row">
-        <label>Week-end</label>
-        <select id="weekendSelect"></select>
-        <div class="row">
+  <label>Week-end</label>
+  <select id="weekend"></select>
+</div>
+
   <label>Rayon : <span id="radiusValue">60</span> km</label>
 
   <input
