--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   <label>Week-end</label>
   <select id="weekend"></select>
 </div>
+      
+<div class="row">
+  <label>Compétitions</label>
+  <div id="competitions" class="chips"></div>
+</div>
 
   <label>Rayon : <span id="radiusValue">60</span> km</label>
 
